# vaporcheck

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
docs/: LIMITATIONS.md  SPIKE-FINDINGS.md  ai-agent-pain-points-opportunity-landscape.md  claude-code-pain-points-and-opportunities.md  identifier-verifier-evidence-check.md
hooks/: hooks.json
spike/: .gitignore  cache.py  server.py  test_mcp.py  test_parse.py  verifier.py
vaporcheck/: __init__.py  cache.py  doctor.py  hook.py  run_spike.py  server.py  test_cache.py  test_manifest.py  test_mcp.py  test_verbs.py  test_verdicts.py  verifier.py
