[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaporcheck"
version = "0.1.0"
description = "Fail-closed existence verification for model-emitted identifiers — catches hallucinated (vaporware) packages, paths, and symbols before an agent acts on them."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Codemax IT Solutions Pvt. Ltd.", email = "licensing@cdmx.in" }]
keywords = ["mcp", "llm", "agent", "hallucination", "slopsquatting", "supply-chain", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Programming Language :: Python :: 3",
]
dependencies = []  # stdlib only — zero runtime dependencies by design

[project.urls]
Homepage = "https://github.com/cdmx-in/vaporcheck"
Repository = "https://github.com/cdmx-in/vaporcheck"
Documentation = "https://github.com/cdmx-in/vaporcheck/tree/main/docs"

[project.scripts]
vaporcheck-mcp = "vaporcheck.server:main"

[tool.setuptools]
packages = ["vaporcheck"]

# ponytail: the test files ship inside the wheel (~20 KB, stdlib-only, harmless);
# split them out to a tests/ dir if wheel hygiene ever matters.
